--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,11 @@ dependencies:
   google_sign_in: ^6.2.1
   sign_in_with_apple: ^6.1.0
   cloud_firestore: ^5.3.0
+  firebase_messaging: ^15.0.0
 
   # Biometría
   local_auth: ^2.3.0
+  device_info_plus: ^11.0.0
 
   # Hive
   hive: ^2.2.3
